--- a/templates/Front/index.html.twig
+++ b/templates/Front/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseFront.html.twig' %}
 
 {% block body %}
     <div class="body_bg">
@@ -22,7 +22,7 @@
                                         
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">fighter</a>
+                                        <a class="nav-link" href="{{url('ev_front_aff')}}">Event</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="team.html">team</a>
